<resources>
    <string name="app_name">training_project</string>
    <string name="login_title">Login</string>
    <string name="welcome_hello">Hello Welcome Back</string>
    <string name="welcome_description">Welcome back please\nsign in again</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="or_text">or</string>
    <string name="gmail_login">Gmail</string>
    <string name="facebook_login">Facebook</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="sign_in">Sign In</string>
    <string name="home_welcome">What do you want to watch?</string>
    <string name="search_hint">Search</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="watchlist_tab">Watch List</string>
    <string name="detail_title">Detail</string>
    <string name="about_movie">About Movie</string>
    <string name="reviews">Reviews</string>
    <string name="cast">Cast</string>
    <string name="home_top_rank_1">1</string>
    <string name="home_top_rank_2">2</string>
    <string name="detail_rating_badge">9.5</string>
    <string name="detail_movie_name">Spiderman No Way Home</string>
    <string name="detail_year">2021</string>
    <string name="detail_duration">148 Minutes</string>
    <string name="detail_genre">Action</string>
    <string name="detail_about_description">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences.</string>
    <string name="detail_review_rating">6.3</string>
    <string name="detail_reviewer_name">Iqbal Shafiq Rozaan</string>
    <string name="detail_review_description">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government.</string>
    <string name="cast_tom_holland">Tom Holland</string>
    <string name="cast_zendaya">Zendaya</string>
    <string name="cast_benedict_cumberbatch">Benedict\nCumberbatch</string>
    <string name="cast_brad_pitt">Brad Pitt</string>
    <string name="platform_android">Android</string>
    <string name="greeting_format">Hello %1$s!</string>
    <string name="validate">Email hoặc mật khẩu không đúng!</string>
    <string name="notfound_movie1">We Are Sorry! We Can\nNot Find The Movie :(</string>
    <string name="notfound_movie2">Find your movie by Type title,\ncategories, years, etc</string>
    <string name="notfound_favorite_movie">There Is No Movie Yet!</string>
    <string name="save_movie">Đã lưu phim vào danh sách!</string>
    <string name="error_no_network">Không có kết nối mạng</string>
    <string name="error_timeout">Kết nối quá chậm</string>
    <string name="error_network_connection">Lỗi kết nối mạng</string>
    <string name="error_unknown">Đã xảy ra lỗi</string>
    <string name="error_401">Hết phiên đăng nhập, vui lòng thử lại</string>
    <string name="error_404">Không tìm thấy dữ liệu yêu cầu</string>
    <string name="error_500">Lỗi hệ thống phía máy chủ</string>
    <string name="error_http_unknow">Lỗi kết nối:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>