<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <LinearLayout
            android:id="@+id/castItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                app:cardCornerRadius="@dimen/dp_50">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cast1" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/cast_tom_holland"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/castItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                app:cardCornerRadius="@dimen/dp_50">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cast2" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/cast_zendaya"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/castItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                app:cardCornerRadius="@dimen/dp_50">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cast3" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:text="@string/cast_benedict_cumberbatch"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/castItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                app:cardCornerRadius="@dimen/dp_50">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cast4" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/cast_brad_pitt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/castFlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="castItem1,castItem2,castItem3,castItem4"
            app:flow_horizontalGap="@dimen/margin_large"
            app:flow_verticalGap="@dimen/margin_large"
            app:flow_wrapMode="aligned"
            app:flow_maxElementsWrap="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>