<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/home_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/button_blue_rounded"
        android:backgroundTint="@color/search_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding_medium">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/text_secondary_gray"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:src="@drawable/ic_search2"
            app:tint="@color/text_secondary_gray" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/padding_large"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardMovie1"
                    android:layout_width="@dimen/dp_140"
                    android:layout_height="@dimen/dp_200"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    app:cardCornerRadius="@dimen/corner_radius_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/mv1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_top_rank_1"
                    android:textColor="@color/background_dark"
                    android:textSize="@dimen/sp_90"
                    android:textStyle="bold"
                    android:shadowColor="@color/primary_blue"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="8"
                    android:elevation="@dimen/dp_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnMovieSpiderman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/dp_140"
                    android:layout_height="@dimen/dp_200"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    app:cardCornerRadius="@dimen/corner_radius_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/spiderman_poster" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_top_rank_2"
                    android:textColor="@color/background_dark"
                    android:textSize="@dimen/sp_90"
                    android:textStyle="bold"
                    android:shadowColor="@color/primary_blue"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="8"
                    android:elevation="@dimen/dp_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
